// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should match snapshot and render EventDetail 1`] = `
<Translate(EventDetail)
  event={
    EventModel {
      "_address": undefined,
      "_allDay": true,
      "_availableLanguages": Object {
        "ar": "1236",
        "en": "1234",
      },
      "_content": undefined,
      "_endDate": "2017-11-18T19:30:00.000Z",
      "_excerpt": undefined,
      "_id": "1235",
      "_startDate": "2017-11-18T09:30:00.000Z",
      "_thumbnail": undefined,
      "_title": "erstes Event",
      "_town": undefined,
    }
  }
  language="en"
  location="augsburg"
/>
`;

exports[`EventsPage should match snapshot and render EventList 1`] = `
<Translate(EventList)
  city="augsburg"
  events={
    Array [
      EventModel {
        "_address": undefined,
        "_allDay": true,
        "_availableLanguages": Object {
          "ar": "1236",
          "de": "1235",
        },
        "_content": undefined,
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": undefined,
        "_id": "1234",
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": undefined,
        "_title": "first Event",
        "_town": undefined,
      },
      EventModel {
        "_address": undefined,
        "_allDay": true,
        "_availableLanguages": Object {
          "ar": "1236",
          "en": "1234",
        },
        "_content": undefined,
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": undefined,
        "_id": "1235",
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": undefined,
        "_title": "erstes Event",
        "_town": undefined,
      },
      EventModel {
        "_address": undefined,
        "_allDay": true,
        "_availableLanguages": undefined,
        "_content": undefined,
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": undefined,
        "_id": "2",
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": undefined,
        "_title": "second Event",
        "_town": undefined,
      },
    ]
  }
  language="en"
/>
`;

exports[`EventsPage should match snapshot and render Failure if event does not exist 1`] = `
<FailureSwitcher
  error={[Error: The event 234729 does not exist in augsburg in your current language.]}
/>
`;
